# fastapi-cbv

./: README.md  pyproject.toml
.github/workflows/: publish.yml
docs/design/: websocket-support.md
src/fastapi_cbv/: __init__.py  decorators.py  routing.py
src/fastcbv/: views.py
tests/: test_future_annotations.py  test_integration.py  test_type_checking.py  test_views.py
