[project]
name = "fastcbv"
version = "0.1.0"
description = "Class-based views for FastAPI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    {name = "Travis Dent", email = "root@a10k.co"}
]
keywords = ["fastapi", "class-based-views", "cbv", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.0",
]

[project.urls]
Homepage = "https://github.com/tcdent/fastapi-cbv"
Repository = "https://github.com/tcdent/fastapi-cbv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastcbv"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ty>=0.0.1a32",
]
